more performance experiments, converted commands and events to records